[gd_scene load_steps=19 format=3 uid="uid://dtabiobeqbddk"]

[ext_resource type="PackedScene" uid="uid://bdbdfcvyf422a" path="res://pieces/pawn.glb" id="1_4hmpi"]
[ext_resource type="Script" path="res://scripts/Board.gd" id="1_d0exn"]
[ext_resource type="PackedScene" uid="uid://dkgdqm4y8atg5" path="res://square_light.tscn" id="2_sqmvr"]
[ext_resource type="PackedScene" uid="uid://bjgo3cjy6lwsc" path="res://square_dark.tscn" id="3_4qoum"]
[ext_resource type="PackedScene" uid="uid://chyif04smvu4h" path="res://pieces/rook.glb" id="3_40c17"]
[ext_resource type="Script" path="res://scripts/themedark.gd" id="3_dn4ux"]
[ext_resource type="PackedScene" uid="uid://c1ydfd33vpxwm" path="res://pieces/king.glb" id="4_jl28i"]
[ext_resource type="PackedScene" uid="uid://bfac7begn26b1" path="res://pieces/queen.glb" id="5_l8f4g"]
[ext_resource type="PackedScene" uid="uid://d1nx3ar866rgg" path="res://pieces/knight.glb" id="6_noc6v"]
[ext_resource type="PackedScene" uid="uid://dvr85xveaf5t8" path="res://pieces/bishop.glb" id="7_25h0j"]
[ext_resource type="Script" path="res://scripts/themelight.gd" id="11_oeb15"]
[ext_resource type="AudioStream" uid="uid://d0oi1fre83two" path="res://audio/move.mp3" id="12_wfqnt"]
[ext_resource type="AudioStream" uid="uid://cwj5omcflqlhr" path="res://audio/capture.mp3" id="13_i3t32"]
[ext_resource type="AudioStream" uid="uid://ckxkcum2ibw8s" path="res://audio/castle.mp3" id="14_nv6l4"]
[ext_resource type="AudioStream" uid="uid://ccd7xx3hu6w3" path="res://audio/moveopponent.mp3" id="15_c6etk"]
[ext_resource type="Script" path="res://scripts/Camera.gd" id="16_18po5"]

[sub_resource type="Sky" id="Sky_4n1df"]

[sub_resource type="Environment" id="Environment_hv4sp"]
background_mode = 2
sky = SubResource("Sky_4n1df")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)

[node name="Node3D" type="Node3D"]
script = ExtResource("16_18po5")

[node name="Board" type="Node3D" parent="."]
script = ExtResource("1_d0exn")

[node name="RookDarkA_1" parent="Board" instance=ExtResource("3_40c17")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 3, 4.12, 3)
script = ExtResource("3_dn4ux")

[node name="PawnDarkA_1" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2, 4.48778, 3)
script = ExtResource("3_dn4ux")

[node name="QueenDark" parent="Board" instance=ExtResource("5_l8f4g")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 3, 4.17, 2)
script = ExtResource("3_dn4ux")

[node name="PawnDarkB_1" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2, 4.48778, 2)
script = ExtResource("3_dn4ux")

[node name="KnightDarkB_2" parent="Board" instance=ExtResource("6_noc6v")]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 2, 2.15, 2)
script = ExtResource("3_dn4ux")

[node name="PawnDarkB_2" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1, 2.48778, 2)
script = ExtResource("3_dn4ux")

[node name="BishopDarkC_2" parent="Board" instance=ExtResource("7_25h0j")]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 2, 2.15, 1)
script = ExtResource("3_dn4ux")

[node name="PawnDarkC_2" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1, 2.48778, 1)
script = ExtResource("3_dn4ux")

[node name="BishopDarkD_2" parent="Board" instance=ExtResource("7_25h0j")]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 2, 2.15, 0)
script = ExtResource("3_dn4ux")

[node name="PawnDarkD_2" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1, 2.48778, 0)
script = ExtResource("3_dn4ux")

[node name="KingDark" parent="Board" instance=ExtResource("4_jl28i")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 3, 4.15, -1)
script = ExtResource("3_dn4ux")

[node name="PawnDarkE_1" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2, 4.48778, -1)
script = ExtResource("3_dn4ux")

[node name="KnightDarkE_2" parent="Board" instance=ExtResource("6_noc6v")]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 2, 2.15, -1)
script = ExtResource("3_dn4ux")

[node name="PawnDarkE_2" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1, 2.48778, -1)
script = ExtResource("3_dn4ux")

[node name="PawnDarkF_1" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2, 4.48778, -2)
script = ExtResource("3_dn4ux")

[node name="RookDarkF_2" parent="Board" instance=ExtResource("3_40c17")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 3, 4.12, -2)
script = ExtResource("3_dn4ux")

[node name="a1_1" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 4, 3)
_board_position = "a1_1"

[node name="a2_1" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 4, 3)
_board_position = "a2_1"

[node name="a9_3" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 3)
_board_position = "a9_3"

[node name="a10_3" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 3)
_board_position = "a10_3"

[node name="b1_1" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 4, 2)
_board_position = "b1_1"

[node name="b2_1" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 4, 2)
_board_position = "b2_1"

[node name="b2_2" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2, 2)
_board_position = "b2_2"

[node name="b3_2" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, 2)
_board_position = "b3_2"

[node name="b4_2" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 2)
_board_position = "b4_2"

[node name="b5_2" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, 2)
_board_position = "b5_2"

[node name="b4_3" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
_board_position = "b4_3"

[node name="b5_3" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 2)
_board_position = "b5_3"

[node name="b6_3" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 2)
_board_position = "b6_3"

[node name="b7_3" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 2)
_board_position = "b7_3"

[node name="b6_4" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -2, 2)
_board_position = "b6_4"

[node name="b7_4" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -2, 2)
_board_position = "b7_4"

[node name="b8_4" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -2, 2)
_board_position = "b8_4"

[node name="b9_4" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -2, 2)
_board_position = "b9_4"

[node name="b9_3" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 2)
_board_position = "b9_3"

[node name="b10_3" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 2)
_board_position = "b10_3"

[node name="c2_2" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2, 1)
_board_position = "c2_2"

[node name="c3_2" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, 1)
_board_position = "c3_2"

[node name="c4_2" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 1)
_board_position = "c4_2"

[node name="c5_2" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, 1)
_board_position = "c5_2"

[node name="c4_3" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
_board_position = "c4_3"

[node name="c5_3" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1)
_board_position = "c5_3"

[node name="c6_3" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 1)
_board_position = "c6_3"

[node name="c7_3" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 1)
_board_position = "c7_3"

[node name="c6_4" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -2, 1)
_board_position = "c6_4"

[node name="c7_4" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -2, 1)
_board_position = "c7_4"

[node name="c8_4" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -2, 1)
_board_position = "c8_4"

[node name="c9_4" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -2, 1)
_board_position = "c9_4"

[node name="d2_2" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2, 0)
_board_position = "d2_2"

[node name="d3_2" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, 0)
_board_position = "d3_2"

[node name="d4_2" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
_board_position = "d4_2"

[node name="d5_2" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, 0)
_board_position = "d5_2"

[node name="d4_3" parent="Board" instance=ExtResource("3_4qoum")]
_board_position = "d4_3"

[node name="d5_3" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
_board_position = "d5_3"

[node name="d6_3" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)
_board_position = "d6_3"

[node name="d7_3" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)
_board_position = "d7_3"

[node name="d6_4" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -2, 0)
_board_position = "d6_4"

[node name="d7_4" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -2, 0)
_board_position = "d7_4"

[node name="d8_4" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -2, 0)
_board_position = "d8_4"

[node name="d9_4" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -2, 0)
_board_position = "d9_4"

[node name="e1_1" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 4, -1)
_board_position = "e1_1"

[node name="e2_1" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 4, -1)
_board_position = "e2_1"

[node name="e2_2" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2, -1)
_board_position = "e2_2"

[node name="e3_2" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, -1)
_board_position = "e3_2"

[node name="e4_2" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -1)
_board_position = "e4_2"

[node name="e5_2" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, -1)
_board_position = "e5_2"

[node name="e4_3" parent="Board" instance=ExtResource("2_sqmvr")]
_board_position = "e4_3"

[node name="e5_3" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1)
_board_position = "e5_3"

[node name="e6_3" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -1)
_board_position = "e6_3"

[node name="e7_3" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -1)
_board_position = "e7_3"

[node name="e6_4" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -2, -1)
_board_position = "e6_4"

[node name="e7_4" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -2, -1)
_board_position = "e7_4"

[node name="e8_4" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, -2, -1)
_board_position = "e8_4"

[node name="e9_4" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -2, -1)
_board_position = "e9_4"

[node name="e9_3" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -1)
_board_position = "e9_3"

[node name="e10_3" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, -1)
_board_position = "e10_3"

[node name="f1_1" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 4, -2)
_board_position = "f1_1"

[node name="f2_1" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 4, -2)
_board_position = "f2_1"

[node name="f9_3" parent="Board" instance=ExtResource("2_sqmvr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -2)
_board_position = "f9_3"

[node name="f10_3" parent="Board" instance=ExtResource("3_4qoum")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, -2)
_board_position = "f10_3"

[node name="RookLightA_3" parent="Board" instance=ExtResource("3_40c17")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -6, 0.12, 3)
script = ExtResource("11_oeb15")

[node name="PawnLightA_3" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -5, 0.48778, 3)
script = ExtResource("11_oeb15")

[node name="QueenLight" parent="Board" instance=ExtResource("5_l8f4g")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -6, 0.17, 2)
script = ExtResource("11_oeb15")

[node name="PawnLightB_3" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -5, 0.48778, 2)
script = ExtResource("11_oeb15")

[node name="KnightLightB_4" parent="Board" instance=ExtResource("6_noc6v")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -5, -1.85, 2)
script = ExtResource("11_oeb15")

[node name="PawnLightB_4" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -4, -1.51222, 2)
script = ExtResource("11_oeb15")

[node name="BishopLightC_4" parent="Board" instance=ExtResource("7_25h0j")]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, -5, -1.85, 1)
script = ExtResource("11_oeb15")

[node name="PawnLightC_4" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -4, -1.51222, 1)
script = ExtResource("11_oeb15")

[node name="BishopLightD_4" parent="Board" instance=ExtResource("7_25h0j")]
transform = Transform3D(-4.37114e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, 4.37114e-08, 1.91069e-15, -5, -1.85, 0)
script = ExtResource("11_oeb15")

[node name="PawnLightD_4" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -4, -1.51222, 0)
script = ExtResource("11_oeb15")

[node name="KingLight" parent="Board" instance=ExtResource("4_jl28i")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -6, 0.15, -1)
script = ExtResource("11_oeb15")

[node name="PawnLightE_4" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -5, 0.48778, -1)
script = ExtResource("11_oeb15")

[node name="KnightLightE_3" parent="Board" instance=ExtResource("6_noc6v")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -5, -1.85, -1)
script = ExtResource("11_oeb15")

[node name="PawnLightE_3" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -4, -1.51222, -1)
script = ExtResource("11_oeb15")

[node name="RookLightF_3" parent="Board" instance=ExtResource("3_40c17")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -6, 0.12, -2)
script = ExtResource("11_oeb15")

[node name="PawnLightF_3" parent="Board" instance=ExtResource("1_4hmpi")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -5, 0.48778, -2)
script = ExtResource("11_oeb15")

[node name="move" type="AudioStreamPlayer" parent="Board"]
stream = ExtResource("12_wfqnt")
mix_target = 1

[node name="capture" type="AudioStreamPlayer" parent="Board"]
stream = ExtResource("13_i3t32")

[node name="castle" type="AudioStreamPlayer" parent="Board"]
stream = ExtResource("14_nv6l4")

[node name="moveopponent" type="AudioStreamPlayer" parent="Board"]
stream = ExtResource("15_c6etk")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.695913, 0.596054, -0.400531, 0, 0.557745, 0.830012, 0.718126, 0.577616, -0.388142, -6.745, 9.17, -3.515)
fov = 87.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hv4sp")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 3, 13, 0)

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -25, 2, 0)

[node name="DirectionalLight3D3" type="DirectionalLight3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3, -4, -33)

[node name="DirectionalLight3D3" type="DirectionalLight3D" parent="DirectionalLight3D3"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3, 4, -65)
